modal icona problem

--- a/css/style.css
+++ b/css/style.css
@@ -136,17 +136,9 @@ img {
   height: 4px;
   border-radius: 4px;
   bottom: 0;
-background-color: var(--ocean);
-border-top: 6px solid #4d5ae5;
+  background-color: var(--ocean);
+  border-top: 6px solid #4d5ae5;
 }
-
-.studio-frame :hover .studio-bold {
-
-  
-  
-}
-
-
 
 .menu {
   display: flex;
@@ -208,86 +200,118 @@ border-top: 6px solid #4d5ae5;
 
 }
 
-.form {
+.modal {
   position: absolute;
-
+  display: flex;
+  flex-direction: column;
   width: 408px;
   height: 584px;
   background-color: #FCFCFC;
-
   margin-left: 500px;
-  z-index: 5;
   transform: translateY(-70%);
-
 }
 
 .form-content {
   display: flex;
   flex-direction: column;
-  padding: 24px;
-  gap: 8px;
+  padding: 0 24px;
+  margin-top: 72px;
+
 }
 
 .form-header {
   font-family: var(--font-family);
   font-size: 14px;
   font-weight: bold;
- text-align: center;
+  text-align: center;
   color: var(--navy-blue);
+  margin-bottom: 16px;
 }
 
-.hero-form-list {
+.form-order {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+}
+
+.form-title {
+
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  color: var(--LIGHT-SLATE, #8E8F99);
+  /* Small Text */
+  font-family: var(--font-family);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  /* 116.667% */
+  letter-spacing: 0.48px;
+
+}
+
+.modal-icon-box {
   position: relative;
-  list-style-type: none;
-}
-.hero-form-icon{
-  position: absolute;
-  top: 30px;
-  left: 16px;
+  background-color: violet;
 }
 
-.form-label {
+.modal-form-list {}
+
+.contact-icon {
+  position: absolute;
+  left: 0;
+  transform: translateX(-90%);
+  transform: translateY(-80%);
+  fill: red;
+}
+
+.form-input:hover .contact-icon,
+.form-input:focus .contact-icon {
+  fill: yellow;
+
+}
+
+.form-input {
+
+  width: 340px;
+  height: 40px;
+  border-radius: 4px;
+  padding: 11px 16px 11px 38px;
+  border: 3px solid var(--NAVY-BLUE-modal,
+      rgba(46, 47, 66, 0.40));
+}
+
+.form-input:hover,
+.form-input:focus {
+  border: 1px solid red;
+
+}
+
+.form-terms {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
   font-family: Roboto;
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 4%;
-
+  margin-top: 16px;
+  margin-bottom: 24px;
 }
 
-.form-comment {
-  width: 360px;
-  height: 120px;
-  border: 1px solid var(--navy-blue-modal);
-  border-radius: 4px;
-text-align: start;
+.form-terms-checkbox {
+  border: 1px solid red;
+  outline: red;
 }
 
-.form-input {
-  width: 360px;
-  height: 40px;
-  border: 1px solid var(--navy-blue-modal);
-  border-radius: 4px;
+.form-terms-checkbox :checked {
+  fill: var(--ocean);
 }
 
-.hero-form-list :hover,
- .hero-form-list :active{
-  border: 1px solid var(--iris);
-
-}
-.form-terms{
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  font-family: Roboto;
-font-weight: 400;
-font-size: 12px;
-line-height: 14px;
-letter-spacing: 4%;
-
-
-}
-.form-policy{
+.form-policy {
   color: var(--iris);
   text-decoration: underline;
 
@@ -299,6 +323,7 @@ letter-spacing: 4%;
   border-radius: 4px;
   background-color: var(--iris);
   margin: 0 auto;
+  color: var(--white);
 }
 
 
@@ -618,6 +643,16 @@ letter-spacing: 4%;
 }
 
 .icon-nav :hover {
+  background-color: var(--ocean);
+}
+
+.foot-icon-nav {
+  display: flex;
+  gap: 16px;
+  cursor: pointer;
+}
+
+.foot-icon-nav :hover {
   background-color: var(--green);
 }
 
@@ -639,6 +674,17 @@ letter-spacing: 4%;
   background: none;
   border: 1px solid var(--white);
   border-radius: 4px;
+  color: var(--white);
+  padding-left: 16px;
+}
+
+.foot-input::placeholder {
+  color: var(--white);
+  font-family: var(--font-family);
+  font-weight: 400px;
+  font-size: 12px;
+  line-height: 24px;
+  letter-spacing: 4%;
 }
 
 .foot-email-label {
@@ -647,7 +693,6 @@ letter-spacing: 4%;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 2%;
-
 }
 
 .foot-form-button {
@@ -677,12 +722,12 @@ letter-spacing: 4%;
   display: flex;
   flex-direction: row;
   gap: 24px;
+
   bottom: 0;
   transform: translateY(70%);
 }
 
 .foot-button-text {
-
   position: relative;
   display: flex;
   flex-direction: row;
