--- a/css/style.css
+++ b/css/style.css
@@ -200,157 +200,9 @@ img {
 
 }
 
-.modal {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  width: 408px;
-  height: 584px;
-  background-color: #FCFCFC;
-  margin-left: 500px;
-  transform: translateY(-70%);
-}
-
-.form-content {
-  display: flex;
-  flex-direction: column;
-  padding: 0 24px;
-  margin-top: 72px;
-
-}
-
-.form-header {
-  font-family: var(--font-family);
-  font-size: 14px;
-  font-weight: bold;
-  text-align: center;
-  color: var(--navy-blue);
-  margin-bottom: 16px;
-}
-
-.form-order {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-
-}
-
-.form-title {
-
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  color: var(--LIGHT-SLATE, #8E8F99);
-  /* Small Text */
-  font-family: var(--font-family);
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 14px;
-  /* 116.667% */
-  letter-spacing: 0.48px;
-
-}
-
-.modal-icon-box {
+.section-modal {
   position: relative;
-}
 
-.modal-form-list {}
-
-.contact-icon {
-  position: absolute;
-  width: 18px;
-  height: 18px;
-  left: 10px;
-  top: 11px;
-
-  fill: var(--navy-blue);
-}
-
-.form-input:hover+.contact-icon,
-.form-input:focus+.contact-icon {
-
-  fill: var(--iris);
-  outline: none;
-}
-
-.form-input {
-
-  width: 360px;
-  height: 40px;
-  border-radius: 4px;
-  padding: 11px 16px 11px 38px;
-  border: 1px solid var(--NAVY-BLUE-modal,
-      rgba(46, 47, 66, 0.40));
-      outline: none;
-}
-
-.modal-icon-box:hover {
-  border: 1px solid var(--iris);
-  border-radius: 4px;
-  outline: none;
-}
-
-.form-textarea {
-  width: 360px;
-  height: 120px;
-  color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
-  resize: none;
-  /* Small Text */
-  font-family: Roboto;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 14px;
-  /* 116.667% */
-  letter-spacing: 0.48px;
-  outline: none;
-  border: 1px solid var(--NAVY-BLUE-modal,
-      rgba(46, 47, 66, 0.40));
-
-}
-
-.form-textarea:hover {
-  border: 1px solid var(--iris);
-}
-
-.form-terms {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 4%;
-  margin-top: 16px;
-  margin-bottom: 24px;
-}
-
-.form-terms-checkbox {
-  background-color: yellow;
- 
-}
-
-.form-terms-checkbox:checked {
- 
-  fill: yellow;
-}
-
-.form-policy {
-  color: var(--iris);
-  text-decoration: underline;
-
-}
-
-.form-button {
-  width: 169px;
-  height: 56px;
-  border-radius: 4px;
-  background-color: var(--iris);
-  margin: 0 auto;
-  color: var(--white);
 }
 
 
@@ -586,6 +438,7 @@ img {
   padding-top: 40px;
 }
 
+/*FOOT SECTION*/
 .foot-section {
   display: flex;
   height: 312px;
@@ -621,6 +474,7 @@ img {
   display: flex;
 }
 
+/* MEDIA CSS*/
 .media {
   margin-left: 120px;
   margin-top: 100px;
@@ -683,8 +537,10 @@ img {
   background-color: var(--green);
 }
 
+/* FOOT EMAIL CSS*/
+
 .foot-form {
-  margin-top: 100px;
+  margin-top: 40px;
   margin-left: 80px;
   color: var(--white);
 }
@@ -760,10 +616,246 @@ img {
   flex-direction: row;
 }
 
-.button-icon {
+.foot-subcribe-button-icon {
   position: absolute;
   width: 24px;
   height: 20px;
   margin-left: 110px;
   margin-top: 50px;
+}
+
+/* MODAL CSS */
+.modal-background {
+  position: fixed;
+  top: 0;
+  margin-left: 36px;
+  z-index: 9999999;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  width: 1440px;
+  height: 676px;
+  background-color: var(--navy-blue-modal);
+}
+
+.modal {
+
+  display: flex;
+  flex-direction: column;
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  background: var(--DAIRY, #FCFCFC);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+
+  margin-left: 550px;
+  top: 80px;
+}
+
+.form-content {
+  display: flex;
+  flex-direction: column;
+  padding: 0 24px;
+  margin-top: 34px;
+
+}
+
+
+.close-wrapper-checkbox {
+  width: 24px;
+  height: 24px;
+  border: 1px solid var(--navy-blue-modal);
+  border-radius: 40px;
+  margin-top: 24px;
+  margin-left: 360px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--cornflower);
+
+}
+
+.form-close-input:checked+.close-wrapper-checkbox {
+  background-color: var(--ocean);
+
+}
+.modal-label-wrapper {
+  display: flex;
+  gap: 8px;
+
+}
+
+.close-icon-check {
+  width: 8px;
+  height: 8px;
+  fill: black;
+  background-color: violet;
+}
+
+.form-header {
+  font-family: var(--font-family);
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  color: var(--navy-blue);
+  margin-bottom: 16px;
+}
+
+.form-order {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+}
+
+.form-title {
+
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  color: var(--LIGHT-SLATE, #8E8F99);
+  /* Small Text */
+  font-family: var(--font-family);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  /* 116.667% */
+  letter-spacing: 0.48px;
+
+}
+
+.modal-icon-box {
+  position: relative;
+}
+.contact-icon {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  left: 10px;
+  top: 11px;
+
+  fill: var(--navy-blue);
+}
+
+
+.form-input:hover+.contact-icon,
+.form-input:focus+.contact-icon {
+
+  fill: var(--iris);
+  outline: none;
+}
+
+.form-input {
+
+  width: 360px;
+  height: 40px;
+  border-radius: 4px;
+  padding: 11px 16px 11px 38px;
+  border: 1px solid var(--NAVY-BLUE-modal,
+      rgba(46, 47, 66, 0.40));
+  outline: none;
+}
+
+.form-input:focus,
+.form-input:hover {
+  border-color: var(--iris);
+}
+
+.form-textarea {
+  width: 360px;
+  height: 120px;
+  color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  resize: none;
+  /* Small Text */
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  /* 116.667% */
+  letter-spacing: 0.48px;
+  outline: none;
+  border: 1px solid var(--NAVY-BLUE-modal,
+      rgba(46, 47, 66, 0.40));
+
+}
+
+.form-textarea:hover {
+  border: 1px solid var(--iris);
+}
+
+.form-terms {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 4%;
+  margin-top: 16px;
+  margin-bottom: 24px;
+}
+
+.modal-wrapper-checkbox {
+  width: 16px;
+  height: 16px;
+  border: 2px solid var(--navy-blue-modal);
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.form-terms-input:checked+.modal-wrapper-checkbox {
+  background-color: var(--ocean);
+}
+
+.modal-label-wrapper {
+  display: flex;
+  gap: 8px;
+
+}
+
+.icon-check {
+  width: 10px;
+  height: 8px;
+
+}
+
+.form-policy {
+  color: var(--iris);
+  text-decoration: underline;
+
+}
+
+.form-button {
+  width: 169px;
+  height: 56px;
+  border-radius: 4px;
+  background-color: var(--iris);
+  margin: 0 auto;
+  color: var(--white);
+}
+
+.form-button:hover {
+  background-color: var(--ocean);
+  cursor: pointer;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
