--- a/css/style.css
+++ b/css/style.css
@@ -638,7 +638,7 @@ img {
   position: fixed;
   top: 0;
   left: 0;
-  width: 1440px;
+  width: 100%;
   height: 100%;
 
   background-color: var(--navy-blue-modal);
@@ -685,8 +685,8 @@ img {
 }
 
 .close-icon-check {
-  width: 18px;
-  height: 18px;
+  width: 8px;
+  height: 8px;
   padding-bottom: 2px;
   fill: red;
 }
@@ -695,7 +695,7 @@ img {
 .button-modal:focus {
   background-color: var(--ocean);
   fill: var(--white);
-  border: none;
+  
 }
 
 /*
