--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,7 @@ img {
   margin-left: 612px;
   background-color: var(--iris);
   cursor: pointer;
+
 }
 
 .effective-button:hover {
@@ -630,23 +631,24 @@ img {
 
 /* MODAL CSS */
 
-.is-open {
-  /*visibility: hidden;*/
-}
-
 .modal-backdrop {
+
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-
   background-color: var(--navy-blue-modal);
   z-index: 9999;
+  visibility: hidden;
+}
+
+.modal-backdrop.is-open {
   visibility: visible;
 }
 
 .modal {
+
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -682,21 +684,23 @@ img {
   align-items: center;
   justify-content: center;
   background-color: var(--cornflower);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-icon-check {
   width: 8px;
   height: 8px;
   padding-bottom: 2px;
-  fill: red;
+  fill: var(--navy-blue);
 }
 
 .button-modal:hover,
 .button-modal:focus {
   background-color: var(--ocean);
-  fill: var(--white);
-  
+  fill: var(--cornflower);
+  border: none;
 }
+
 
 /*
 .close-wrapper-checkbox {
@@ -755,13 +759,11 @@ fill: var(--white);
   flex-direction: column;
   gap: 4px;
   color: var(--LIGHT-SLATE, #8E8F99);
-  /* Small Text */
   font-family: var(--font-family);
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 14px;
-  /* 116.667% */
   letter-spacing: 0.48px;
 
 }
@@ -776,8 +778,8 @@ fill: var(--white);
   height: 18px;
   left: 10px;
   top: 11px;
-
   fill: var(--navy-blue);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -797,11 +799,13 @@ fill: var(--white);
   border: 1px solid var(--NAVY-BLUE-modal,
       rgba(46, 47, 66, 0.40));
   outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus,
 .form-input:hover {
-  border-color: var(--iris);
+  border: 1px solid var(--iris);
+
 }
 
 .form-textarea {
@@ -809,21 +813,20 @@ fill: var(--white);
   height: 120px;
   color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
   resize: none;
-  /* Small Text */
   font-family: Roboto;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 14px;
-  /* 116.667% */
   letter-spacing: 0.48px;
   outline: none;
   border: 1px solid var(--NAVY-BLUE-modal,
       rgba(46, 47, 66, 0.40));
-
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-textarea:hover {
+.form-textarea:hover,
+.form-textarea:focus {
   border: 1px solid var(--iris);
 }
 
@@ -848,7 +851,7 @@ fill: var(--white);
   display: flex;
   align-items: center;
   justify-content: center;
-
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-terms-input:checked+.modal-wrapper-checkbox {
@@ -882,6 +885,7 @@ fill: var(--white);
   border: none;
   margin: 0 auto;
   color: var(--white);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-button:hover {
